--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -118,8 +118,8 @@ body {
                    <button type="submit" class="btn btn-template-outlined"><i class="fa fa-user-md"></i> Register</button>
                  </div>
                  <hr class="my-4">
-                 <a href="{%  provider_login_url 'google'  %}" class="btn btn-lg btn-google btn-block text-uppercase" ><i class="fab fa-google mr-2"></i> Resgiser with Google</a>
-              <a href="{%  provider_login_url 'facebook'  %}" class="btn btn-lg btn-facebook btn-block text-uppercase"><i class="fab fa-facebook-f mr-2"></i> Register with Facebook</a>
+                 <!-- <a href="{%  provider_login_url 'google'  %}" class="btn btn-lg btn-google btn-block text-uppercase" ><i class="fab fa-google mr-2"></i> Resgiser with Google</a>
+              <a href="{%  provider_login_url 'facebook'  %}" class="btn btn-lg btn-facebook btn-block text-uppercase"><i class="fab fa-facebook-f mr-2"></i> Register with Facebook</a> -->
                 </form>
                 <p class="text-center text-muted">already our customer ?</p>
                 <p class="text-center text-muted"><a href="{% url 'account_login' %}"><strong>signin now</strong></a>! It is easy and done in 1 minute and gives you access to special discounts and much more!</p>
