--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,16 @@
    document.cookie ='device=' + device + ";domain=;path=/"
    </script>
   
-<style type="text/css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-49Q5NPV7VF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-49Q5NPV7VF');
+</script>
+  <style type="text/css">
 ul {
 list-style-type: none !important;
 }
