--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,9 +17,10 @@
                 <li class="breadcrumb-item active">Contact</li>
               </ul>
             </div>
+
             <div class="col col-lg-12">
               {% if messages %}
-              <ul>
+              <ul id="add-html-here">
               {% for message in messages %}
                           <li>
                             <div role="alert" class="alert alert-success alert-dismissible">
@@ -86,48 +87,50 @@
                 </div>
               </div>
               <div class="col-md-8 mx-auto">
-                <form  method="POST">
+                <form id="form" method="POST">
                   {% csrf_token %}
-                
+               
                    <div class="row">
                     <div class="col-sm-6">
                       
                       <div class="form-group">
                         <label for="firstname">First Name  {{form.email.errors}}</label>
-                        <input id="firstname" name="first_name" type="text" class="form-control">
+                        <input id="firstname" name="first_name" type="text" class="form-control" required>
                      
                       </div>
                     </div>
                     <div class="col-sm-6">
                       <div class="form-group">
                         <label for="lastname">Last Name  {{form.email.errors}}</label>
-                        <input id="lastname" name="last_name" type="text" class="form-control">
+                        <input id="lastname" name="last_name" type="text" class="form-control" required>
                       </div>
                     </div>
                     <div class="col-sm-6">
                       <div class="form-group">
                         <label for="email">Email  {{form.email.errors}}</label>
-                        <input id="email" name="email" type="text" class="form-control">
+                        <input id="email" name="email" type="email" class="form-control" required>
                     
                       </div>
                     </div>
                     <div class="col-sm-6">
                       <div class="form-group">
                         <label for="subject">Subject  {{form.email.errors}}</label>
-                        <input id="subject" name="subject" type="text" class="form-control">
+                        <input id="subject" name="subject" type="text" class="form-control" required>
                       </div>
                     </div>
                     <div class="col-sm-12">
                       <div class="form-group">
                         <label for="message">Message  {{form.email.errors}}</label>
-                        <textarea id="message" name="message" class="form-control"></textarea>
+                        <textarea id="message" name="message" class="form-control" required></textarea>
                       </div>
                     </div>
                     <div class="col-sm-12 text-center">
                       <button type="submit" class="btn btn-template-outlined"><i class="fa fa-envelope-o"></i> Send message</button>
                     </div>
+                    
                   </div> 
                 </form>
+           
               </div>
             </div>
           </section>
@@ -139,7 +142,31 @@
  
   <script 
   src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script type="text/javascript">
+    $("#form").submit(function(e){
+      // prevent from normal form behaviour
+          e.preventDefault();
+          // serialize the form data  
+          var serializedData = $(this).serialize();
+          //let target_element = $('#add-html-here');
+          $.ajax({
+              type : 'POST',
+              url :  "{% url 'shop:contact' %}",
+              data : serializedData,
+              success : function(response){
+              //reset the form after successful submit
+                  $("#form")[0].reset();
+                 // target_element.html();
+                 window.location.href="{% url 'shop:contact' %}"
+              },
+              error : function(response){
+                  console.log(response)
+              }
+          });
+     });
+  
+  </script>
   
 {% endblock %}
 
