--- a/templates/contact.html
+++ b/templates/contact.html
@@ -143,7 +143,7 @@
   <script 
   src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     $("#form").submit(function(e){
       // prevent from normal form behaviour
           e.preventDefault();
@@ -166,7 +166,7 @@
           });
      });
   
-  </script>
+  </script> -->
   
 {% endblock %}
 
