--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="container">
     <h1>{% trans "Sign Up" %}</h1>
-  <div class="row">
+  <div class="row mb-5">
     <div class="col">
 
     <p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
