--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,12 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>E-Commerce</title>
+    <title> {% trans "E-Commerce" %}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -198,3 +199,7 @@ list-style-type: none !important;
 
   
 </html>
+
+
+
+
