--- a/templates/socialaccount/login_cancelled.html
+++ b/templates/socialaccount/login_cancelled.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col">
 
-            <p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{% url 'shop:signup' %}">sign in</a>.{% endblocktrans %}</p>
+            <p>You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{% url 'account_signin' %}">sign in</a>.</p>
 
         </div>
     </div>
