--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,7 @@
 
   gtag('config', 'UA-198188192-1');
 </script>
+    <script data-ad-client="ca-pub-7011276525548831" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <script type="text/javascript">
     function getCookie(name) {
